# qqq-dca-signal

./: .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml
docs/: design.md
src/ndx_dca_signal/: backtest.py  cache.py  cli.py  data_sources.py  database.py  launchd.py  llm.py  models.py  news.py  notifier.py  pushplus.py  reports.py  rules.py  runner.py  sim_trading.py
src/ndx_dca_signal/resources/: __init__.py
src/qqq_dca_signal/: backtest.py  cache.py  cli.py  config.py  data_sources.py  database.py  launchd.py  llm.py  models.py  notifier.py  pushplus.py  reports.py  rules.py  runner.py  sim_trading.py
